Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127522

QBENCHMARK result does not output global data tag

XMLWordPrintable

    • 5
    • 95f02adf7 (dev), 7ab145a9e (6.9), f54b4793e (6.8), 466d79319 (tqtc/lts-6.5)
    • Foundation Sprint 121, Foundation Sprint 122

      When combining a global data driven test (cf. initTestCase_data / QFETCH_GLOBAL) with a data driven test (myBenchmark / QFETCH) and QBENCHMARK: the BenchmarkResult is not distinguishable between the different global data driven tags: only the local data tag is included:

      ... 
      <!-- Firstglobal:FirstLocal -->
      <BenchmarkResult metric="WalltimeMilliseconds" tag="FirstLocal" value="100" iterations="1"/>
      ...
      <!-- Firstglobal:SecondLocal -->
      <BenchmarkResult metric="WalltimeMilliseconds" tag="SecondLocal" value="101" iterations="1"/>
      ...
      <!-- SecondGlobal:FirstLocal -->
      <BenchmarkResult metric="WalltimeMilliseconds" tag="FirstLocal" value="112" iterations="1"/>
      ...
      <!-- Firstglobal:SecondLocal -->
      <BenchmarkResult metric="WalltimeMilliseconds" tag="SecondLocal" value="111" iterations="1"/>

      See attached the resulting XML.

      This leads to QtCreator to categorise the benchmark results in the wrong test (see screenshot).

      One way to solve this is to use the same globalTag:localTag in the BenchmarkResult, similar to how the Incident/DataTag does it.

        1. TestResults.png
          TestResults.png
          179 kB
        2. TestResults.xml
          5 kB
        3. tst_benchmarkfetchglobal.cpp
          0.8 kB
        For Gerrit Dashboard: QTBUG-127522
        # Subject Branch Project Status CR V

            magdalenas Magdalena Stojek
            koenpoppe Koen Poppe
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: